Tiempo de proyecto finalizado

--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -306,6 +306,12 @@
     <Compile Include="Reportes\EmpleadoProyecto\FrmEstadisticaEmpleadoProyecto.Designer.cs">
       <DependentUpon>FrmEstadisticaEmpleadoProyecto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\EmpleadoProyecto\FrmEstadisticasHorasProyecto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\EmpleadoProyecto\FrmEstadisticasHorasProyecto.Designer.cs">
+      <DependentUpon>FrmEstadisticasHorasProyecto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\HorasEmpleado\FrmHorasEmpleado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -441,8 +447,12 @@
       <DependentUpon>EmpleadoProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\EmpleadoProyecto\EstadisticaEmpleadoProyecto.rdlc" />
+    <EmbeddedResource Include="Reportes\EmpleadoProyecto\EstadisticaHorasProyecto.rdlc" />
     <EmbeddedResource Include="Reportes\EmpleadoProyecto\FrmEstadisticaEmpleadoProyecto.resx">
       <DependentUpon>FrmEstadisticaEmpleadoProyecto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\EmpleadoProyecto\FrmEstadisticasHorasProyecto.resx">
+      <DependentUpon>FrmEstadisticasHorasProyecto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\EmpleadoProyecto\ListadoEmpleadosProyecto.rdlc" />
     <EmbeddedResource Include="Reportes\HorasEmpleado\FrmHorasEmpleado.resx">
