--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -263,11 +263,11 @@
     <Compile Include="Formularios\VentaProducto\FrmNuevaVenta.Designer.cs">
       <DependentUpon>FrmNuevaVenta.cs</DependentUpon>
     </Compile>
-    <Compile Include="Formularios\Proyectos\FrmVentaProyecto.cs">
+    <Compile Include="Formularios\Proyectos\FrmProyecto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Formularios\Proyectos\FrmVentaProyecto.Designer.cs">
-      <DependentUpon>FrmVentaProyecto.cs</DependentUpon>
+    <Compile Include="Formularios\Proyectos\FrmProyecto.Designer.cs">
+      <DependentUpon>FrmProyecto.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios\VentaProducto\FrmVentaProducto.cs">
       <SubType>Form</SubType>
@@ -283,6 +283,7 @@
     <Compile Include="Negocio\Ng_HorasEmpleado.cs" />
     <Compile Include="Negocio\Ng_MotivoEgreso.cs" />
     <Compile Include="Negocio\Ng_Producto.cs" />
+    <Compile Include="Negocio\Ng_Proyecto.cs" />
     <Compile Include="Negocio\Ng_ProyectoDuracion.cs" />
     <Compile Include="Negocio\Ng_Rol.cs" />
     <Compile Include="Negocio\Ng_Tareas.cs" />
@@ -502,8 +503,8 @@
     <EmbeddedResource Include="Formularios\VentaProducto\FrmNuevaVenta.resx">
       <DependentUpon>FrmNuevaVenta.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\Proyectos\FrmVentaProyecto.resx">
-      <DependentUpon>FrmVentaProyecto.cs</DependentUpon>
+    <EmbeddedResource Include="Formularios\Proyectos\FrmProyecto.resx">
+      <DependentUpon>FrmProyecto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\VentaProducto\FrmVentaProducto.resx">
       <DependentUpon>FrmVentaProducto.cs</DependentUpon>
